--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@ ID = "salon-yuishinkai"
   [headers.values]
     Accept-Ranges = "bytes"
     Cache-Control = "max-age=31536000, immutable"
-    Server = "Yuishinkai Karate Server"
+    Server = "Kashiyama Dojo Server"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     Timing-Allow-Origin = "*"
 
